pkg/i2gw/providers/common/testdata/input-file.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1 
kind: Pod 
metadata: 
  name: nginx 
spec:
  securityContext:
    runAsNonRoot: true
  containers: 
  - name: nginx 
    image: nginx:1.14.2 
    ports: 
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: namespace1
  resourceVersion: "999"
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: namespace2
  resourceVersion: "999"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-no-namespace
  resourceVersion: "999"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  namespace: namespace1
  resourceVersion: "999"
spec:
  ingressClassName: ingressClass-ingress1
  rules:
  - http:
      paths:
      - path: /path-ingress1
        pathType: Prefix
        backend:
          service:
            name: service-ingress1
            port:
              number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress2
  namespace: namespace2
  resourceVersion: "999"
spec:
  ingressClassName: ingressClass-ingress2
  rules:
  - http:
      paths:
      - path: /path-ingress2
        pathType: Prefix
        backend:
          service:
            name: service-ingress2
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-no-namespace
  resourceVersion: "999"
spec:
  ingressClassName: ingressClass-ingress-no-namespace
  rules:
  - http:
      paths:
      - path: /path-ingress-no-namespace
        pathType: Prefix
        backend:
          service:
            name: service-ingress-no-namespace
            port:
              number: 80
